RESOLVED FIXED 165020
Fix exception scope verification failures in JSDataView.cpp.
https://bugs.webkit.org/show_bug.cgi?id=165020
Summary Fix exception scope verification failures in JSDataView.cpp.
Mark Lam
Reported 2016-11-21 19:37:41 PST
Patch coming.
Attachments
proposed patch. (1.58 KB, patch)
2016-11-21 19:41 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-21 19:41:13 PST
Created attachment 295321 [details] proposed patch.
Mark Lam
Comment 2 2016-11-28 15:41:49 PST
Thanks for the review. Landed in r209034: <http://trac.webkit.org/r209034>.
Note You need to log in before you can comment on or make changes to this bug.