Fix exception scope verification failures in JSDataView.cpp. https://bugs.webkit.org/show_bug.cgi?id=165020

Reviewed by Saam Barati.

* runtime/JSDataView.cpp:
(JSC::JSDataView::put):



Canonical link: https://commits.webkit.org/182737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209034 268f45cc-cd09-0410-ab3c-d52691b4dbfc